# lan-manager

./: CHANGELOG.md  LICENSE  configure.ac
.github/: CODEOWNERS
config/: LanManager.path  LanManager.service
source/: Makefile.am
source/LanMgrMain/: Makefile.am  lan_manager.c  lan_manager_bridge.c  lan_manager_bridge.h  lan_manager_dml.c  lan_manager_dml.h  lan_manager_interface.c  lan_manager_interface.h  lan_managerdb.c  lan_managerds.c  lanmgr_communication_apis.c  lanmgr_communication_apis.h  lanmgr_log.c
source/LanMgrTest/: Makefile.am  lan_netlinkifmonitor.c
source/include/: lan_manager_custom_bridge.h  lan_manager_dml.h  lan_manager_interface.h  lan_managerdb.h  lan_managerds.h  lanmgr_log.h
